fixed icon misalignment in mobile; forced (mobile) menu collapse on scroll down; left-aligned menu items
Former-commit-id: cf44f20af72519908460800bee2203b812df2ff2

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -78,6 +78,11 @@ html, body {
     padding-left: 2rem;
     padding-right: 1.5rem;
   }
+
+  /* Ensures footer icons and such are aligned*/
+  .artigos-tecs-item {
+    margin-right: 0 !important;
+  }
 }
 
 /* navbar expansion (md breakpoint) */
